RESOLVED FIXED213330
[WinCairo][MediaFoundation] Use /DELAYLOAD for mf.dll
https://bugs.webkit.org/show_bug.cgi?id=213330
Summary [WinCairo][MediaFoundation] Use /DELAYLOAD for mf.dll
Fujii Hironori
Reported 2020-06-17 22:23:49 PDT
[WinCairo][MediaFoundation] Use /DELAYLOAD for mf.dll In Bug 198783, I stopped using soft linking for Media Foundation. A Playwright user is using Windows 10 N which doesn't have Media Foundation. https://github.com/microsoft/playwright/issues/2548#issuecomment-645700214 I should try /DELAYLOAD for mf.dll as Chromium does. https://chromium.googlesource.com/chromium/src/+/HEAD/media/gpu/BUILD.gn#238
Attachments
Patch (2.50 KB, patch)
2020-07-08 20:06 PDT, Fujii Hironori
pvollan: review+
Fujii Hironori
Comment 1 2020-07-08 20:06:40 PDT
Per Arne Vollan
Comment 2 2020-07-09 07:42:04 PDT
Comment on attachment 403838 [details] Patch R=me.
Fujii Hironori
Comment 3 2020-07-09 12:50:07 PDT
Radar WebKit Bug Importer
Comment 4 2020-07-09 12:51:14 PDT
Fujii Hironori
Comment 5 2020-07-09 18:15:38 PDT
Oops. This change intoduced linker warnings for WinCairo. Filed: Bug 214170 – [WinCairo][MediaFoundation] r264188 introduced linker warning: LNK4199: /DELAYLOAD:mf.dll ignored; no imports found from mf.dll
Fujii Hironori
Comment 6 2020-09-11 15:25:26 PDT
Oops. there is one more dll. Filed: Bug 216420 – [WinCairo][MediaFoundation] Use /DELAYLOAD for evr.dll
Note You need to log in before you can comment on or make changes to this bug.