[WinCairo][MediaFoundation] Use /DELAYLOAD for mf.dll https://bugs.webkit.org/show_bug.cgi?id=213330

Reviewed by Per Arne Vollan.

WinCairo failed to start up due to a missing dependency on some
versions of Windows in which Media Foundation is not available
such like Windows 10 N. Use delay load for Media Foundation. And,
check the availability.

* PlatformWinCairo.cmake: Link with delayimp.lib. Added /DELAYLOAD linker options.
* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::isAvailable): Check mf.dll is available.

Canonical link: https://commits.webkit.org/226960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264188 268f45cc-cd09-0410-ab3c-d52691b4dbfc