Source/WebCore/PlatformWinCairo.cmake
@@ -43,6 +43,7 @@ list(APPEND WebCore_LIBRARIES
     Mfplat
     comctl32
     crypt32
+    delayimp
     dxva2
     evr
     iphlpapi
@@ -53,6 +54,8 @@ list(APPEND WebCore_LIBRARIES
     winmm
     ws2_32
 )
+
+target_link_options(WebCore PUBLIC /DELAYLOAD:mf.dll /DELAYLOAD:mfplat.dll)
 
 list(APPEND WebCoreTestSupport_LIBRARIES
     Cairo::Cairo
